demo/40-netsets/calico.deny-public-nets-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.deny-public-nets-egress
spec:
  tier: security
  # label on ns1 namespace
  namespaceSelector: compliance == "open"
  order: 100
  types:
    - Egress
  egress:
  - action: Deny
    protocol: TCP
    source: {}
    destination:
      selector: "type == 'public'"
  # - action: Pass
  #   source: {}
  #   destination: {}
